# synthcpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/App/: CMakeLists.txt
src/AudioEngine/: CMakeLists.txt
